Balance convert haha

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cassidy-redux",
-  "author": "Liane Cagara",
+  "name": "cassidy-nica",
+  "author": "Liane Cagara | JenicaDev",
   "version": "2.6.5",
   "description": "Reworked Versatile Facebook Bot framework that provides many features.",
   "main": "index.js",
